Experimented with various css properties to give the main page a structure

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <head>
         <title>Top Anime Recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/stylesheets-index.css">
     </head>
     <body>
-        <h1>Weeb's Cookbook</h1>
+        <div class="blank-container">
+        <h1 class="header-index">Weeb's Cookbook</h1>
+        <img class="chef-img" src="https://cdn.vox-cdn.com/thumbor/C0s6RevxLq2RZQ6UN1fNIkhczwk=/1400x1050/filters:format(png)/cdn.vox-cdn.com/uploads/chorus_asset/file/22050311/Screen_Shot_2020_11_18_at_10.57.40_AM.png" alt="anime chef cooking" width="80%" height="80%">
+        <div class="recipes-list">
         <p> <a target="_blank" href="recipes/ramen.html">Ramen</a></p>
         <p> <a target="_blank" href="recipes/onigiri.html">Onigiri</a></p>
         <p> <a target="_blank" href="recipes/taiyaki.html">Taiyaki</a></p>
+        </div>
+        <p class="description"> Here are some classic recipes we often see in our Favorite animes</p>
+        <p class="description">We will keep it simple but without compromising on the taste</p>
+        <p  class="description"> So choose a recipe and lets get started</p>
+        </div>  
     </body>
 </html>
